force-app/main/default/objects/Contact/fields/Spouse_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Type__c</fullName>
    <label>[Del] Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1001001</fullName>
                <label>PEGAWAI SWASTA</label>
            </value>
            <value>
                <fullName>1002001</fullName>
                <label>PENGOLAHAN LAINNYA</label>
            </value>
            <value>
                <fullName>1003001</fullName>
                <label>DAUR ULANG BARANG-BARANG BUKAN LOGAM</label>
            </value>
            <value>
                <fullName>1003002</fullName>
                <label>DAUR ULANG BARANG-BARANG LOGAM</label>
            </value>
            <value>
                <fullName>1004001</fullName>
                <label>AKUMULATIR LISTRIK &amp; BATU BATERAI</label>
            </value>
            <value>
                <fullName>1004002</fullName>
                <label>SEPATU/ALAS KAKI</label>
            </value>
            <value>
                <fullName>1004003</fullName>
                <label>ALAS KAKI</label>
            </value>
            <value>
                <fullName>1004004</fullName>
                <label>ALAT ANGKUT YANG LAINNYA</label>
            </value>
            <value>
                <fullName>ALAT TRANMISI KOMUNIKASI</fullName>
            </value>
            <value>
                <fullName>BARANG DARI LOGAM UNTUK PERTANIAN, PERTUKANGAN &amp; PEMOTONGAN</fullName>
            </value>
            <value>
                <fullName>PRODUKSI OBAT</fullName>
            </value>
            <value>
                <fullName>OBAT, FARMASI &amp; JAMU</fullName>
            </value>
            <value>
                <fullName>BAHAN BAKU PEMBERANTAS HAMA &amp; ZAT PENGATUR TUMBUH</fullName>
            </value>
            <value>
                <fullName>BAHAN KIMIA &amp; BARANG KIMIA LAINNYA</fullName>
            </value>
            <value>
                <fullName>ANGKUTAN LAUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>