force-app/main/default/objects/Contact/fields/Spouse_Industry_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Type</label>
    <referenceTo>API_Industry_Group_and_Type__c</referenceTo>
    <relationshipLabel>Customer Informations (Industry Type)</relationshipLabel>
    <relationshipName>Customer_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>