force-app/main/default/objects/Contact/fields/Spouse_Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Address__c</fullName>
    <label>Job Address</label>
    <type>TextArea</type>
</CustomField>