force-app/main/default/objects/Contact/fields/Spouse_Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Position__c</fullName>
    <label>Job Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANGKUTAN LAUT</fullName>
            </value>
            <value>
                <fullName>EKSPEDISI</fullName>
            </value>
            <value>
                <fullName>RENTAL</fullName>
            </value>
            <value>
                <fullName>MPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>