force-app/main/default/objects/Contact/fields/Spouse_Mobile_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Mobile_Phone_1__c</fullName>
    <label>Mobile Phone 1</label>
    <type>Phone</type>
</CustomField>