force-app/main/default/objects/Contact/fields/Spouse_Mobile_Phone_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Mobile_Phone_1_Formula__c</fullName>
    <formula>Spouse_Mobile_Phone_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone 1</label>
    <type>Text</type>
</CustomField>