force-app/main/default/objects/Contact/fields/Spouse_Mobile_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Mobile_Phone_2__c</fullName>
    <label>Mobile Phone 2</label>
    <type>Phone</type>
</CustomField>