force-app/main/default/objects/Contact/fields/Spouse_Monthly_Income_Omset__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Monthly_Income_Omset__c</fullName>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>