force-app/main/default/objects/Contact/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>