force-app/main/default/objects/Contact/fields/Spouse_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Occupation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Occupation</label>
    <referenceTo>Master_Occupation_New__c</referenceTo>
    <relationshipLabel>Customer Informations (Spouse Occupation)</relationshipLabel>
    <relationshipName>Customer_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>