force-app/main/default/objects/Contact/fields/Spouse_Profesi_Berbahaya_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profesi_Berbahaya_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Profesi Berbahaya</label>
    <referenceTo>Risk_Occupation_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Informations (Spouse Profesi Berbahaya)</relationshipLabel>
    <relationshipName>Customer_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>