force-app/main/default/objects/Contact/fields/Spouse_Profession_2__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profession_2__c</fullName>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>