force-app/main/default/objects/Contact/fields/Spouse_Profession__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profession</label>
    <referenceTo>Master_Occupation__c</referenceTo>
    <relationshipLabel>Customer Informations (Profession)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>