force-app/main/default/objects/Contact/fields/Spouse_Religion__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Religion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Religion</label>
    <referenceTo>Master_Religion__c</referenceTo>
    <relationshipLabel>Customer Informations (Religion)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>