force-app/main/default/objects/Contact/fields/Spouse_WNA_Country__c.field-meta.xml
<CustomField>
    <fullName>Spouse_WNA_Country__c</fullName>
    <label>[Del] WNA Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaa</fullName>
            </value>
            <value>
                <fullName>bbb</fullName>
            </value>
            <value>
                <fullName>ccc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>