force-app/main/default/objects/Contact/fields/Spouse_WNA_Country_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Spouse_WNA_Country_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WNA Country</label>
    <referenceTo>Master_Country__c</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>