force-app/main/default/objects/Contact/fields/Spouse_Working_Status2__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Working_Status2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working Status</label>
    <referenceTo>Master_Status_Pekerjaan__c</referenceTo>
    <relationshipLabel>Customer Informations (Working Status)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>