force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BO</fullName>
                <label>Beneficial Owner / Pihak Pengendali Akhir</label>
            </value>
            <value>
                <fullName>CP</fullName>
                <label>Contact Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>