force-app/main/default/objects/Contact/fields/Tempat_Tanggal_Lahir__c.field-meta.xml
<CustomField>
    <fullName>Tempat_Tanggal_Lahir__c</fullName>
    <formula>Place_of_Birth__c &amp; &quot;, &quot; &amp;
LPAD(TEXT(DAY(Date_of_Birth__c)), 2, &quot;0&quot;) &amp; &quot; &quot; &amp;
CASE(
MONTH(Date_of_Birth__c),
1, &quot;Januari&quot;,
2, &quot;Februari&quot;,
3, &quot;Maret&quot;,
4, &quot;April&quot;,
5, &quot;Mei&quot;,
6, &quot;Juni&quot;,
7, &quot;Juli&quot;,
8, &quot;Agustus&quot;,
9, &quot;September&quot;,
10, &quot;Oktober&quot;,
11, &quot;November&quot;,
12, &quot;Desember&quot;,
&quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(Date_of_Birth__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempat Tanggal Lahir</label>
    <type>Text</type>
</CustomField>