force-app/main/default/objects/Contact/recordTypes/FinServ__IndustriesIndividual.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesIndividual</fullName>
    <active>true</active>
    <description>Contact data for a retail client</description>
    <label>Individual</label>
</RecordType>