force-app/main/default/objects/Contact/validationRules/Date_of_Birth_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, ISBLANK( Date_of_Birth__c ))</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>