force-app/main/default/objects/Contact/validationRules/Domicile_Address_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Address_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, AND( Is_Domicile_Same_as_Legal_Address__c = FALSE, ISBLANK( Domicile_Address__c )))</errorConditionFormula>
    <errorDisplayField>Domicile_Address__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>