force-app/main/default/objects/Contact/validationRules/Domicile_Address_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Address_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>(IF( $User.Is_Debug_User__c = TRUE, FALSE, NOT( Is_Domicile_Same_as_Legal_Address__c ) &amp;&amp;
LEN( Domicile_Address__c ) &gt; 0 &amp;&amp;
LEN(Domicile_Address__c ) &lt; 3)) &amp;&amp; !IsVRBypassed__c</errorConditionFormula>
    <errorDisplayField>Domicile_Address__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>