force-app/main/default/objects/Contact/validationRules/Domicile_Kecamatan_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Kecamatan_Not_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Is_Domicile_Same_as_Legal_Address__c = FALSE ,Domicile_Kecamatan__r.City_Id__r.code__c !=  Domicile_City_Kabupaten__r.code__c)</errorConditionFormula>
    <errorDisplayField>Domicile_Kecamatan__c</errorDisplayField>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>