force-app/main/default/objects/Contact/validationRules/Domicile_Kelurahan_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Kelurahan_Not_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Is_Domicile_Same_as_Legal_Address__c = FALSE , Domicile_Kelurahan__r.District_Id__r.code__c  !=   Domicile_Kecamatan__r.code__c)</errorConditionFormula>
    <errorDisplayField>Domicile_Kelurahan__c</errorDisplayField>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>