force-app/main/default/objects/Contact/validationRules/Domicile_Longitude_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Longitude_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE ,FALSE,  AND( Is_Domicile_Same_as_Legal_Address__c = FALSE, OR(ISBLANK( Domicile_Latitude_Longitude__Longitude__s ),  Domicile_Latitude_Longitude__Longitude__s = 0)))</errorConditionFormula>
    <errorDisplayField>Domicile_Latitude_Longitude__Longitude__s</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>