force-app/main/default/objects/Contact/validationRules/Domicile_RT_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_RT_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE,  AND( Is_Domicile_Same_as_Legal_Address__c = FALSE, ISBLANK( Domicile_RT__c )))</errorConditionFormula>
    <errorDisplayField>Domicile_RT__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>