force-app/main/default/objects/Contact/validationRules/Domicile_Zip_Code_Must_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Domicile_Zip_Code_Must_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Domicile_Same_as_Legal_Address__c = FALSE, NOT(REGEX(  Domicile_Zip_Code__c  , &quot;^[0-9]*$$&quot;)))</errorConditionFormula>
    <errorDisplayField>Domicile_Zip_Code__c</errorDisplayField>
    <errorMessage>Alphabet and Special character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>