force-app/main/default/objects/Contact/validationRules/Email_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, AND( ISBLANK(  Email )))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>