force-app/main/default/objects/Contact/validationRules/First_Name_Must_Alphabet.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Must_Alphabet</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, OR(NOT(REGEX(  FirstName, &quot;^[a-zA-Z ]*$&quot;))))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Number and special character are not allowed, for example / \ :*?&quot;&lt;&gt;|</errorMessage>
</ValidationRule>