force-app/main/default/objects/Contact/validationRules/Gender_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, ISPICKVAL(GenderIdentity , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>GenderIdentity</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>