force-app/main/default/objects/Contact/validationRules/ID_Number_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, ISBLANK( ID_Number__c ))</errorConditionFormula>
    <errorDisplayField>ID_Number__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>