force-app/main/default/objects/Contact/validationRules/ID_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Must_16_Digits</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE,FALSE,IF(OR(ISBLANK(ID_Number__c ), ISNULL(ID_Number__c ),ID_Number__c = &quot;&quot;),FALSE,NOT(REGEX( ID_Number__c , &quot;^[0-9]{15,16}$&quot;))))</errorConditionFormula>
    <errorDisplayField>ID_Number__c</errorDisplayField>
    <errorMessage>Please input 16 digit number, numeric only</errorMessage>
</ValidationRule>