force-app/main/default/objects/Contact/validationRules/ID_Number_Must_16_Digits_If_Spouse_KTP.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Must_16_Digits_If_Spouse_KTP</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TEXT(Spouse_ID_Type__c) = &quot;KTP&quot;, IF($User.Is_Debug_User__c = TRUE, FALSE, IF(OR(ISBLANK(Spouse_ID_Number__c),ISNULL(Spouse_ID_Number__c),Spouse_ID_Number__c = &quot;&quot;), FALSE, NOT(REGEX(Spouse_ID_Number__c, &quot;^[0-9]{15,16}$&quot;)))),FALSE)</errorConditionFormula>
    <errorDisplayField>Spouse_ID_Number__c</errorDisplayField>
    <errorMessage>Please input 16 digit number, numeric only</errorMessage>
</ValidationRule>