force-app/main/default/objects/Contact/validationRules/Job_Address_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Address_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, ISBLANK( Job_Address__c ))</errorConditionFormula>
    <errorDisplayField>Job_Address__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>