force-app/main/default/objects/Contact/validationRules/Last_Name_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, IF(ISBLANK( LastName), FALSE, LEN(LastName) &lt; 3))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>