force-app/main/default/objects/Contact/validationRules/Legal_Address_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Address_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c =TRUE, FALSE, ISBLANK( Legal_Address__c ))</errorConditionFormula>
    <errorDisplayField>Legal_Address__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>