force-app/main/default/objects/Contact/validationRules/Legal_Address_Min_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Address_Min_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>(IF( $User.Is_Debug_User__c = TRUE, FALSE, LEN( Legal_Address__c ) &lt; 3))&amp;&amp; !IsVRBypassed__c</errorConditionFormula>
    <errorDisplayField>Legal_Address__c</errorDisplayField>
    <errorMessage>Please enter at least 3 character</errorMessage>
</ValidationRule>