force-app/main/default/objects/Contact/validationRules/Legal_City_Kabupaten_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_City_Kabupaten_Not_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>Legal_Kabupaten__r.Province_Id__r.code__c !=   Legal_Province__r.code__c</errorConditionFormula>
    <errorDisplayField>Legal_Kabupaten__c</errorDisplayField>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>