force-app/main/default/objects/Contact/validationRules/Legal_Kecamatan_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Kecamatan_Not_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>Legal_Kecamatan__r.City_Id__r.code__c !=  Legal_Kabupaten__r.code__c</errorConditionFormula>
    <errorDisplayField>Legal_Kecamatan__c</errorDisplayField>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>