force-app/main/default/objects/Contact/validationRules/Legal_Kelurahan_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Kelurahan_Not_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>Legal_Kelurahan__r.District_Id__r.code__c  !=   Legal_Kecamatan__r.code__c</errorConditionFormula>
    <errorDisplayField>Legal_Kelurahan__c</errorDisplayField>
    <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
</ValidationRule>