force-app/main/default/objects/Contact/validationRules/Legal_Longitude_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Longitude_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE ,FALSE, OR(ISBLANK( Legal_Latitude_Longitude__Longitude__s ),  Legal_Latitude_Longitude__Longitude__s = 0))</errorConditionFormula>
    <errorDisplayField>Legal_Latitude_Longitude__Longitude__s</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>