force-app/main/default/objects/Contact/validationRules/Legal_Province_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Province_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $User.Is_Debug_User__c = TRUE, FALSE, ISBLANK( Legal_Province__c ))</errorConditionFormula>
    <errorDisplayField>Legal_Province__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>